fixed z-index issue

--- a/components/layout/navigation/navigation.module.scss
+++ b/components/layout/navigation/navigation.module.scss
@@ -1,6 +1,6 @@
 @mixin ripple($color, $transition-delay) {
     position: fixed;
-    z-index: 15;
+    z-index: 950;
     top: 1rem;
     right: 1rem;
     width: 3.5rem;
@@ -20,7 +20,7 @@ $navigation-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1) 0.4s;
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 50;
+    z-index: 1500;
     opacity: 0;
     transform: scale(0.01);
     transition: $navigation-transition;
@@ -30,7 +30,7 @@ $navigation-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1) 0.4s;
     position: fixed;
     top: 1rem;
     right: 1rem;
-    z-index: 100;
+    z-index: 1600;
     width: 3.5rem;
     height: 3.5rem;
     border-radius: 50%;
@@ -72,10 +72,9 @@ $navigation-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1) 0.4s;
 
 .background {
     position: fixed;
-    z-index: 20;
+    z-index: 1000;
     top: 1rem;
     right: 1rem;
-    z-index: 25;
     width: 3.5rem;
     height: 3.5rem;
     background-color: var(--primary-color);
@@ -179,19 +178,19 @@ $navigation-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1) 0.4s;
         }
 
         & ~ .ripple1 {
-            transform: scale(55);
+            transform: scale(60);
         }
 
         & ~ .ripple2 {
-            transform: scale(50);
+            transform: scale(55);
         }
 
         & ~ .ripple3 {
-            transform: scale(45);
+            transform: scale(50);
         }
 
         & ~ .background {
-            transform: scale(40);
+            transform: scale(45);
         }
 
         & ~ .navigation {
